[package]
name = "libp2p-dog"
edition = "2021"
rust-version = { workspace = true }
description = "DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/libp2p-dog"

[dependencies]
async-channel = { workspace = true }
asynchronous-codec = { workspace = true }
bytes = { workspace = true }
either = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex_fmt = { workspace = true }
libp2p = { workspace = true }
libp2p-core = { workspace = true }
prometheus-client = { workspace = true }
quick-protobuf = { workspace = true }
quick-protobuf-codec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tracing = { workspace = true }
web-time = { workspace = true }

[lints]
workspace = true
