[package]
name = "experiment"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[package.metadata.release]
release = false

[dependencies]
libp2p-dog = { path = "../dog" }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.4.4", features = ["derive"] }
time = "0.3.41"
slog = "2.7.0"
slog-json = "2.6.1"
slog-async = "2.8.0"
dns-lookup = "2.0.2"
byteorder = "1.4.3"
hostname = "0.3.1"
thiserror = "2.0.12"
libp2p = { version = "0.55.0", features = ["tokio", "noise", "tcp", "yamux"] }
libp2p-swarm = { version = "0.46.0", features = ["macros"] }
